--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   image_picker: ^0.8.3+1
   intl: 0.17.0
   lite_rolling_switch: ^0.1.1
+  path_provider: ^2.0.5
   sqflite: 2.0.0+3
 
 dev_dependencies:
