--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,12 +21,14 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  awesome_notifications: ^0.0.6+11
   cupertino_icons: ^1.0.2
   date_picker_timeline: ^1.2.3
   flutter:
     sdk: flutter
   flutter_settings_screens: ^0.2.2+1
   flutter_staggered_grid_view: 0.4.0
+  font_awesome_flutter: ^9.1.0
   google_fonts: ^2.1.0
   image_picker: ^0.8.3+1
   intl: 0.17.0
