--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_settings_screens: ^0.2.2+1
-  flutter_staggered_grid_view: 0.4.0
+  flutter_local_notifications: ^7.0.0
+  dotted_border: 
   
   google_fonts: ^2.1.0
   image_picker: ^0.8.3+1
@@ -50,8 +51,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - assets/
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
