--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   lite_rolling_switch: ^0.1.1
   path_provider: ^2.0.5
   sqflite: 2.0.0+3
+  shared_preferences: ^2.0.5
+
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +54,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
