--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,23 +21,21 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
- 
   cupertino_icons: ^1.0.2
   date_picker_timeline: ^1.2.3
+  dotted_border: null
   flutter:
     sdk: flutter
-  flutter_settings_screens: ^0.2.2+1
   flutter_local_notifications: ^7.0.0
-  dotted_border: 
-  
+  flutter_settings_screens: ^0.2.2+1
   google_fonts: ^2.1.0
   image_picker: ^0.8.3+1
   intl: 0.17.0
   lite_rolling_switch: ^0.1.1
   path_provider: ^2.0.5
-  sqflite: 2.0.0+3
   shared_preferences: ^2.0.5
-
+  splashscreen: ^1.3.5
+  sqflite: 2.0.0+3
 
 dev_dependencies:
   flutter_test:
